--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,11 @@
-body{margin: 0}
+
 #map{
-    width: 100%; height: 100vh;margin:0;padding: 0;
+  width: 90%;
+  height: 70vh;
+  margin: 0 auto;
+  padding: 0;
+  border-radius: 0.25rem;
+  box-shadow: rgb(60 64 67 / 30%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
 }
+
 
